Fixed alignment on contact and change for nav;

--- a/design/scss/molecules/_navigation.scss
+++ b/design/scss/molecules/_navigation.scss
@@ -25,7 +25,6 @@
 .navbar {
     padding-left: 0;
     padding-right: 0;
-    border-bottom: solid 1px lighten($hairline-color, 20);
 }
 
 .navbar-light {
